@@ -1,3 +1,10 @@
+<%
+  if ENV['BEAKER_HYPERVISOR']
+    hypervisor = ENV['BEAKER_HYPERVISOR']
+  else
+    hypervisor = 'vagrant'
+  end
+-%>
 # This nodeset spins up a simple one-host test VM for both EL6 and EL7
 HOSTS:
   el7:
@@ -7,7 +14,7 @@ HOSTS:
       - master
     platform:   el-7-x86_64
     box:        centos/7
-    hypervisor: vagrant
+    hypervisor: <%= hypervisor %>
 
   el6:
     roles:
@@ -15,10 +22,13 @@ HOSTS:
       - client
     platform:   el-6-x86_64
     box:        centos/6
-    hypervisor: vagrant
+    hypervisor: <%= hypervisor %>
 
 CONFIG:
   log_level: verbose
   type:      aio
   vagrant_memsize: 256
   ## vb_gui: true
+<% if ENV['BEAKER_PUPPET_COLLECTION'] -%>
+  puppet_collection: <%= ENV['BEAKER_PUPPET_COLLECTION'] %>
+<% end -%>
