@@ -1,3 +1,10 @@
+<%
+  if ENV['BEAKER_HYPERVISOR']
+    hypervisor = ENV['BEAKER_HYPERVISOR']
+  else
+    hypervisor = 'vagrant'
+  end
+-%>
 # This nodeset spins up a simple one-host test VM for both EL6 and EL7
 HOSTS:
   oel7:
@@ -6,19 +13,22 @@ HOSTS:
       - default
       - master
     platform:   el-7-x86_64
-    box:        elastic/oel-7-x86_64
-    hypervisor: vagrant
+    box:        onyxpoint/oel-7-x86_64
+    hypervisor: <%= hypervisor %>
 
   oel6:
     roles:
       - agent
       - client
     platform:   el-6-x86_64
-    box:        elastic/oel-6-x86_64
-    hypervisor: vagrant
+    box:        onyxpoint/oel-6-x86_64
+    hypervisor: <%= hypervisor %>
 
 CONFIG:
   log_level: verbose
   type:      aio
   vagrant_memsize: 256
   ## vb_gui: true
+<% if ENV['BEAKER_PUPPET_COLLECTION'] -%>
+  puppet_collection: <%= ENV['BEAKER_PUPPET_COLLECTION'] %>
+<% end -%>
