@@ -1,25 +1,0 @@
-# This nodeset spins up a simple one-host test VM for both EL6 and EL7
-HOSTS:
-  oel7:
-    roles:
-      - server
-      - default
-      - master
-    platform:   el-7-x86_64
-    box:        elastic/oel-7-x86_64
-    hypervisor: vagrant
-
-  oel6:
-    roles:
-      - agent
-      - client
-    platform:   el-6-x86_64
-    box:        elastic/oel-6-x86_64
-    hypervisor: vagrant
-
-CONFIG:
-  log_level: verbose
-  type:      aio
-  puppet_collection: puppet5
-  vagrant_memsize: 256
-  ## vb_gui: true
