@@ -1,3 +1,7 @@
+* Thu Nov 01 2018 Jeanne Greulich <jeanner.greulich@onyxpoint.com> - 0.0.5
+- Update static assets for puppet 5
+- Update to onyxpoint OEL boxes in acceptance tests
+
 * Sun Mar 11 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.0.4
 - Updated to work with Puppet 5 and OEL
 
